--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "frelian"
   ],
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.1.3"
+  },
+  "browserslist": [
+    "last 1 chrome version"
+  ]
 }
